// separate file to avoid circular protobuf dependencies
syntax = "proto3";

package aleapb.agreementpb;

option go_package = "github.com/filecoin-project/mir/pkg/pb/aleapb/agreementpb";

import "mir/codegen_extensions.proto";

// ============================================================
// Data structures
// ============================================================

message AbbaOrigin {
  option (mir.struct) = true;

  uint64 ag_round = 1;
}
